# noisebase

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
docs/: conf.py  development.md  environment.yaml  index.md  manual.md  news.md  reference.md
docs/_static/: juxtapose.js  juxtapose.min.js
docs/algorithms/: index.md  rgbe.md  temporal_cropping.md  video_loader.md
docs/benchmarks/: index.md  rendering_v1.md
docs/datasets/: index.md  sampleset_v1.md
docs/formats/: index.md  sample_test_v1.md  sample_training_v1.md
docs/guides/: index.md  simple_denoiser.md
docs/loaders/: index.md  sample_test_v1.md  sample_training_v1.md
noisebase/: __init__.py  compression.py  data.py  projective.py
noisebase/conf/noisebase/: sampleset_test32_v1.yaml  sampleset_test8_v1.yaml  sampleset_v1.yaml
noisebase/conf/noisebase/format/: test_sample_v1.yaml  training_sample_v1.yaml
noisebase/lightning/: __init__.py  midepoch_ckpt.py
noisebase/loaders/lightning/: __init__.py  training_sample_v1.py
noisebase/loaders/torch/: __init__.py  test_sample_v1.py  training_sample_v1.py
noisebase/metrics/: flip.py  fvvdp.py
noisebase/scripts/: __init__.py  nb_compute_metrics.py  nb_download.py  nb_result_table.py  nb_save_reference.py
noisebase/torch/: __init__.py  misc.py  projective.py  video_sampler.py
