[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "noisebase"
description = "Datasets and benchmarks for neural Monte Carlo denoising"
dependencies = [
  "torch",
  "pyfvvdp==1.2.0",
  "zarr>=2",
  "pytorch-msssim",
  "hydra-core",
  "tqdm"
]
authors = [{name = "Martin Bálint", email = "martin@balint.io"}]
readme = "README.md"
keywords = ["denoising", "Monte Carlo", "MC", "neural"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",

    "Environment :: GPU",
    "Operating System :: OS Independent",

    "Programming Language :: Python :: 3",
]

[project.scripts]
nb-save-reference = "noisebase:scripts.nb_save_reference"
nb-compute-metrics = "noisebase:scripts.nb_compute_metrics"
nb-result-table = "noisebase:scripts.nb_result_table"
nb-download = "noisebase:scripts.nb_download"

[project.urls]
Documentation = "https://balint.io/noisebase"
Repository = "https://github.com/balintio/noisebase.git"